tests/final/expect/15__diag__alias_case_malformed_unclosed_comment_no_crash.diag
Diagnostics:
Error: Unterminated block comment at tests/final/cases/15__diagjson__malformed_unclosed_comment_no_crash.c:3:5 (got '/*')
